Refactor getTopCard and removeCard